force-app/main/default/objects/CustomerContext__c/CustomerContext__c.object-meta.xml
<CustomObject>
    <label>Customer Context</label>
    <nameField>
        <label>CustomerContext</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Contexts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>