force-app/main/default/objects/CustomerContext__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Customer Contexts</relationshipLabel>
    <relationshipName>Customer_Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>