force-app/main/default/objects/CustomerContext__c/fields/LastReviewed__c.field-meta.xml
<CustomField>
    <fullName>LastReviewed__c</fullName>
    <label>Last Reviewed</label>
    <type>Date</type>
</CustomField>