force-app/main/default/objects/CustomerContext__c/fields/ReviewedBy__c.field-meta.xml
<CustomField>
    <fullName>ReviewedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Contexts</relationshipName>
    <type>Lookup</type>
</CustomField>