force-app/main/default/objects/CustomerContext__c/fields/RiskFlag__c.field-meta.xml
<CustomField>
    <fullName>RiskFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk Flag</label>
    <type>Checkbox</type>
</CustomField>