force-app/main/default/objects/CustomerContext__c/fields/RiskNotes__c.field-meta.xml
<CustomField>
    <fullName>RiskNotes__c</fullName>
    <label>Risk Notes</label>
    <type>TextArea</type>
</CustomField>