force-app/main/default/objects/CustomerContext__c/fields/SupportSLA__c.field-meta.xml
<CustomField>
    <fullName>SupportSLA__c</fullName>
    <label>Support SLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Priority</fullName>
            </value>
            <value>
                <fullName>MissionCritical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>